--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+#======================
+# Others
+test_photos.csv
+ebird_world_life_list.csv
+missing_photos.csv
+
+# vim
+*~
+*.swp
+*.swo
+TAGS
